# BM-Project

./: .gitignore  README.md  pyrightconfig.json
.github/workflows/: eslint.yml  pyright.yml
backend/: README.md  config.json  pyproject.toml
backend/src/: database.py  decorators.py  enums.py  main.py  notifications.py  schemas.py  session.py  utils.py
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: app.js  dashboard.js  desktopNotification.js  index.js  landing.js  login.js  navbar.js  notFound.js  notifications.js
frontend/src/components/: floatingMenu.js
frontend/src/css/: font.css  index.css  navbar.css
frontend/src/dashboard/: buttonActions.js  personList.js  personalTutor.js  toolbar.js  tutorTable.js
frontend/src/dialogs/: classMappingDialog.js  createMettingsDialog.js  peopleDialog.js  settingsDialog.js
frontend/src/services/: api.js  errorHandler.js
